logs/python-packager.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lice'...
Listing './lib/python3.5/site-packages/lice-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypackager'...
Compiling './lib/python3.5/site-packages/pypackager/__init__.py'...
Compiling './lib/python3.5/site-packages/pypackager/base.py'...
Compiling './lib/python3.5/site-packages/pypackager/channel.py'...
Compiling './lib/python3.5/site-packages/pypackager/constants.py'...
Compiling './lib/python3.5/site-packages/pypackager/creator.py'...
Compiling './lib/python3.5/site-packages/pypackager/downloader.py'...
Compiling './lib/python3.5/site-packages/pypackager/exceptions.py'...
Compiling './lib/python3.5/site-packages/pypackager/extractor.py'...
Compiling './lib/python3.5/site-packages/pypackager/loaders.py'...
Compiling './lib/python3.5/site-packages/pypackager/packager.py'...
Compiling './lib/python3.5/site-packages/pypackager/render.py'...
Listing './lib/python3.5/site-packages/pypackager/renderers'...
Compiling './lib/python3.5/site-packages/pypackager/renderers/__init__.py'...
Compiling './lib/python3.5/site-packages/pypackager/settings.py'...
Listing './lib/python3.5/site-packages/pypackager/template'...
Listing './lib/python3.5/site-packages/pypackager/template/docs'...
Compiling './lib/python3.5/site-packages/pypackager/template/docs/conf.py'...
Compiling './lib/python3.5/site-packages/pypackager/template/setup.py'...
***   File "./lib/python3.5/site-packages/pypackager/template/setup.py", line 28
    '{{ license.classifier }}',{{/license.classifier}}
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypackager/template/tests'...
Compiling './lib/python3.5/site-packages/pypackager/template/tests/__init__.py'...
Listing './lib/python3.5/site-packages/pypackager/template/{{package_name}}'...
Compiling './lib/python3.5/site-packages/pypackager/template/{{package_name}}/__init__.py'...
Compiling './lib/python3.5/site-packages/pypackager/utils.py'...
Listing './lib/python3.5/site-packages/pystache'...
Listing './lib/python3.5/site-packages/pystache/commands'...
Listing './lib/python3.5/site-packages/pystache/tests'...
Listing './lib/python3.5/site-packages/pystache/tests/data'...
Listing './lib/python3.5/site-packages/pystache/tests/data/locator'...
Listing './lib/python3.5/site-packages/pystache/tests/examples'...
Listing './lib/python3.5/site-packages/pystache-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/python_packager-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
